
2003-01-09  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* icall.c: applied fix from Zoltan Varga that fixes Type.IsPrimitive
	for reference types.

Wed Jan 8 20:11:46 CET 2003 Paolo Molaro <lupus@ximian.com>

	* loader.c: fixed off by one error in loaded parameter names.

2003-01-08  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_icall_wrapper): like
	mono_marshal_get_native_wrapper, but simpler and use a MonoMethodSignature
	instead of a MonoMethod.

2003-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* decimal.c: fixed bug #36537.

Mon Jan 6 19:37:59 CET 2003 Paolo Molaro <lupus@ximian.com>

	* marshal.c: throw a missing method exception if a
	P/Invoke method is not found.

Sun Jan 5 11:57:09 CET 2003 Paolo Molaro <lupus@ximian.com>

	* icall.c: allow a null this for constructors.

Sat Jan 4 18:28:42 CET 2003 Paolo Molaro <lupus@ximian.com>

	* icall.c: raise the proper exceptions if the arguments to the
	internal Invoke are incorrect.

2003-01-03  Dietmar Maurer  <dietmar@ximian.com>

	* marshal.c (mono_marshal_get_ptr_to_struct): code cleanups

2003-01-03  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h: Increment MONO_SYMBOL_FILE_DYNAMIC_VERSION.

2002-12-31  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.c: Completely rewrote the type section.
	Instead of using individual malloc()ed fields, we use one big
	continuous memory area and offsets into this area.
	See the comments in the source code for details.

2002-12-30  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h (MonoDebugTypeInfo): Renamed to MonoDebugClassInfo.

2002-12-30  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h (MonoSymbolFileMethodAddress): Include the
	line number table in this data blob instead of using an external
	pointer.

2002-12-28  Martin Baulig  <martin@ximian.com>

	* debug-mono-symfile.h: Increment MONO_SYMBOL_FILE_DYNAMIC_VERSION.

2002-12-22  Rachel Hestilow  <hestilow@ximian.com>
