@@ -130,6 +130,7 @@ typedef enum {
 	MONO_MARSHAL_CONV_STR_LPSTR,
 	MONO_MARSHAL_CONV_LPSTR_STR,
 	MONO_MARSHAL_CONV_STR_LPWSTR,
+	MONO_MARSHAL_CONV_LPWSTR_STR,
 	MONO_MARSHAL_CONV_STR_LPTSTR,
 	MONO_MARSHAL_CONV_STR_ANSIBSTR,
 	MONO_MARSHAL_CONV_STR_TBSTR,
